alignment fixed again damn

--- a/src/styles/_skills.scss
+++ b/src/styles/_skills.scss
@@ -51,7 +51,7 @@
         left:60.5%;//overrides left in spacing mixin
 
         @media screen and (max-width:v.$smallScreen) {
-          left:48%;
+          left:49%;
         }
       }
   
